<resources>
    <string name="app_name">basketballscore</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="_2_points">+2 POINTS</string>
    <string name="free_throw">FREE THROW</string>
    <string name="team_b">Team B</string>
    <string name="reset">RESET</string>
    <string name="free_throwb">FREE THROW</string>
    <string name="_0b">0</string>
    <string name="_2_pointsb">+2 POINTS</string>
    <string name="_3_pointsb">+3 POINTS</string>
    <string name="_3_pointsa">+3 POINTS</string>
</resources>
