<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.akashpandey.basketballscore.MainActivity">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="133dp"
            android:layout_height="22dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/team_a"
            android:textColor="@android:color/background_dark"
            app:layout_constraintBottom_toTopOf="@+id/team_a_score"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.327"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="22dp" />

        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/_0"
            android:textColor="#000000"
            android:textSize="56sp"
            app:layout_constraintEnd_toStartOf="@+id/team_b_score"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginLeft="24dp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:onClick="show3TeamA"
            android:text="@string/_3_pointsa"
            app:layout_constraintBottom_toTopOf="@+id/reset"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team_a_score"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="24dp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:onClick="show2TeamA"
            android:text="@string/_2_points"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button10"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="24dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:onClick="show1TeamB"
            android:text="@string/free_throw"
            app:layout_constraintBottom_toTopOf="@+id/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button11"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="8dp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="133dp"
            android:layout_height="21dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/team_b"
            android:textColor="@android:color/background_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintStart_toEndOf="@+id/team_a_score"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/team_b_score"
            android:layout_width="133dp"
            android:layout_height="75dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/_0"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="56sp"
            app:layout_constraintBottom_toBottomOf="@+id/team_a_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="8dp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:onClick="show3TeamB"
            android:text="@string/_3_pointsb"
            app:layout_constraintBottom_toBottomOf="@+id/button10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/team_a_score"
            app:layout_constraintTop_toBottomOf="@+id/team_b_score"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="8dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:onClick="show2TeamB"
            android:text="@string/_2_points"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button7"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="24dp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:onClick="show1TeamA"
            android:text="@string/free_throw"
            app:layout_constraintBottom_toTopOf="@+id/reset"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.214"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button11"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="21dp" />


        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="reset"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.88" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="179dp"
            android:background="#ae6800"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:layout_marginRight="179dp" />


</android.support.constraint.ConstraintLayout>
